--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
                     "type": "cutter",
                     "action": "remove",
                     "args": {
-                      "wantedList": ["cn"]
+                      "wantedList": ["vn"]
                     }
                   },
                   {
@@ -123,7 +123,7 @@ jobs:
                       "outputName": "geoip.mmdb",
                       "outputDir": "./dists",
                       "overwriteList": [
-                        "cn",
+                        "vn",
                         "private"
                       ]
                     }
